[package]
name = "nkts"
description = "ReizeiinTouka; a game engine"
version = "0.1.0"
authors = ["Hikaru Terazono (3c1u) <3c1u@vulpesgames.tokyo>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package.metadata.bundle]
name = "ReizeiinTouka"
version = "1.0.0"
identifier = "com.github.3c1u.nkts"
resources = ["ja.lproj"]
category = "public.app-category.adventure-games"
copyright = "Copyright (c) 2020 Hikaru Terazono. All rights reserved."

[dependencies]
encoding_rs = "0.8.22"
failure = "0.1.8"
log = "0.4.8"
simplelog = "0.7.6"
lazy_static = "1.4.0"
winit = "0.22.1"
vulkano = "0.18.0"
vulkano-win = "0.18.0"
rusttype = "0.9.1"
vulkano-shaders = "0.18.0"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.20.0"
objc = "0.2.7"

[dev-dependencies]
png = "0.16.3"
