[package]
name = "nkts"
description = "ReizeiinTouka; a game engine"
version = "0.1.0"
authors = ["Hikaru Terazono (3c1u) <3c1u@vulpesgames.tokyo>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[features]
default = ["simd"]
simd = []

[package.metadata.bundle]
name = "ReizeiinTouka"
version = "1.0.0"
identifier = "com.github.3c1u.nkts"
resources = ["ja.lproj"]
category = "public.app-category.adventure-games"
copyright = "Copyright (c) 2020 Hikaru Terazono. All rights reserved."

[dependencies]
encoding_rs = "0.8.23"
failure = "0.1.8"
log = "0.4.8"
simplelog = "0.8.0"
lazy_static = "1.4.0"
winit = "0.22.2"
vulkano = "0.19.0"
vulkano-win = "0.19.0"
rusttype = "0.9.2"
vulkano-shaders = "0.19.0"
s25 = "0.2.0"
lru = "0.5.2"
rayon = "1.3.1"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.22.0"
objc = "0.2.7"

[dev-dependencies]
png = "0.16.6"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
